--- a/Zad_1/Zad_1-prace/zad_1.4.html
+++ b/Zad_1/Zad_1-prace/zad_1.4.html
@@ -8,6 +8,6 @@
 <body>
     <p style="font-family: Arial; font-size: 32px; color: #333; ; text-align: center; font-weight: bold; margin-bottom: 1500px;"> To jest przykład akapitu z zastosowanymi stylami CSS: czcionka Arial, rozmiar 32px, kolor #333, pogrubiona, wyrównany do środka, margines dolny = 1500px</p>
 
-    <p>Kolejny akapit, również z zastaosowanymi stylami, ale tym razem czcionka Times New Roman, rozmiar czcionki 26px, wysokość linii 1.6, kolor czcionki #555, tekst wyrównany do prawej strony, margines dolny paragrafu 20px, odstęp między literami 0.5px. <span style="font-style: italic;"> To jest fragment tekstu wewnątrz paragrafu, ale dodatkowo jest podkreślony i napisany kursywą</span></p>
+    <p style="font-family: 'Times New Roman', Times, serif; font-size: 26px; line-height: 1.6; color: #555; text-align: right; margin-bottom: 20px; letter-spacing: 0.5px;">To jest przykład akapitu z zastosowanymi stylami CSS: czcionka Times New Roman, rozmiar 26px, wysokość linii 1.6, kolor #555, wyrównany do prawej, margines dolny paragrafu 20px, odstęp między literami 0.5px. <br> <span style="font-style: italic; text-decoration: underline;"> To jest fragment tekstu wewnątrz paragrafu, ale dodatkowo jest podkreślony i napisany kursywą</span></p>
 </body>
 </html>
