--- a/Selektory/Selektor.html
+++ b/Selektory/Selektor.html
@@ -11,6 +11,7 @@
     }
 </style>
 <body>
+    <!-- 3*. Napisz definicję stylu CSS, który ustawi tło na żółte w komórce <td> z id="today" -->
     <td id="today"> coś tam coś</td>
 </body>
 </html>
